test/Fail/UnfoldingOutsideOpaque.agda
-- Andreas, 2024-10-12, trigger error Syntax.UnfoldingOutsideOpaque

unfolding

-- error: [Syntax.UnfoldingOutsideOpaque]
-- Unfolding declarations can only appear as the first declaration immediately contained in an opaque block.
