test/Fail/UnfoldingOutsideOpaque.err
UnfoldingOutsideOpaque.agda:3.1-10: error: [Syntax.UnfoldingOutsideOpaque]
Unfolding declarations can only appear as the first declaration
immediately contained in an opaque block.
